# FSE_trab_final

./: .gitignore  LICENSE  README.md  partitions.csv
components/cJSON/: CMakeLists.txt
components/esp32-DHT11/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  buzzer.c  gpio_setup.c  i2c.c  init.c  joystick.c  lcd.c  main.c  morse.c  mq2.c  mqtt.c  nvs.c  parser.c  temperature_sensor.c  ultrasonic_sensor.c  wifi.c
main/includes/: buzzer.h  gpio_setup.h  i2c.h  init.h  joystick.h  lcd.h  morse.h  mqtt.h  nvs.h  parser.h  pwm.h  temperature_sensor.h  ultrasonic_sensor.h  wifi.h
main/sensor/: buzzer.c  joystick.c  lcd.c  pwm.c  temperature_sensor.c  ultrasonic_sensor.c
main/service/: mqtt.c  nvs.c
main/utils/: gpio_setup.c  init.c  parser.c
